add Makefile to automate build process